--- a/Profiles/gemini_los20_a13.env
+++ b/Profiles/gemini_los20_a13.env
@@ -7,7 +7,7 @@ CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 EXTRA_CMDS:LD=ld.lld
 
 KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_xiaomi_msm8996.git
-KERNEL_BRANCH=lineage-20
+KERNEL_BRANCH=lineage-22.1
 CLANG_SOURCE=https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b.git
 CLANG_BRANCH=lineage-20.0
 
